SERVER-6603 remove remapLock and hook functions (Windows)

Remove the code that tried to lock out allocation of virtual memory
while the Windows version of remapPrivateView was remapping a memory-
mapped file.  It didn't solve the problem but did affect performance.