src/mongo/db/db.cpp
@@ -55,7 +55,6 @@
 #include "mongo/util/version.h"
 
 #if defined(_WIN32)
-# include "mongo/util/hook_windows_memory.h"
 # include "mongo/util/ntservice.h"
 # include <DbgHelp.h>
 #else
@@ -1045,15 +1044,6 @@ static int mongoDbMain(int argc, char* argv[]) {
         // needs to be after things like --configsvr parsing, thus here.
         if( repairpath.empty() )
             repairpath = dbpath;
-
-#if defined(_WIN32)
-        if ( cmdLine.dur ) {
-            // Hook Windows APIs that can allocate memory so that we can RemapLock them out while
-            //  remapPrivateView() has a data file unmapped (so only needed when journaling)
-            // This is the last point where we are still single-threaded, makes hooking simpler
-            hookWindowsMemory();
-        }
-#endif
 
         Module::configAll( params );
         dataFileSync.go();
