src/mongo/dbtests/framework.cpp
@@ -38,10 +38,6 @@
 #include "mongo/util/file_allocator.h"
 #include "mongo/util/version.h"
 
-#if defined(_WIN32)
-#include "mongo/util/hook_windows_memory.h"
-#endif
-
 namespace po = boost::program_options;
 
 namespace mongo {
@@ -232,15 +228,6 @@ namespace mongo {
                 log() << "running with journaling enabled to test that. dbtests will do this occasionally even if --dur is not specified." << endl;
                 log() << "****************" << endl;
             }
-
-#if defined(_WIN32)
-            if ( cmdLine.dur ) {
-                // Hook Windows APIs that allocate memory so that we can RemapLock them out while
-                //  remapPrivateView() has a data file unmapped (so only needed when journaling)
-                // This is the last point where we are still single-threaded, makes hooking simpler
-                hookWindowsMemory();
-            }
-#endif
 
             FileAllocator::get()->start();
 
