src/mongo/s/server.cpp
@@ -43,7 +43,6 @@
 #include "cursors.h"
 #include "shard_version.h"
 #include "../util/processinfo.h"
-#include "mongo/util/concurrency/remap_lock.h"
 #include "mongo/db/lasterror.h"
 #include "mongo/util/stacktrace.h"
 
@@ -68,12 +67,6 @@ namespace mongo {
     static bool scriptingEnabled = true;
     static bool noHttpInterface = false;
     static vector<string> configdbs;
-
-    // SERVER-2942 -- We do it this way because RemapLock is used in both mongod and mongos but
-    // we need different effects.  When called in mongod it needs to be a mutex and in mongos it
-    // needs to be a no-op.  This is the mongos version, the mongod version is in mmap_win.cpp.
-    RemapLock::RemapLock() {}
-    RemapLock::~RemapLock() {}
 
     bool inShutdown() {
         return dbexitCalled;
