src/mongo/util/concurrency/remap_lock.h
@@ -23,9 +23,9 @@
 
 namespace mongo {
 
-    struct RemapLock {
-        RemapLock();
-        ~RemapLock();
-    };
+    //struct RemapLock {
+    //    RemapLock();
+    //    ~RemapLock();
+    //};
 
 }
